--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -28,6 +28,7 @@
     <PackageReference Update="Azure.Storage.Blobs.ChangeFeed" Version="12.0.0-preview.1" />
     <PackageReference Update="BenchmarkDotNet" Version="0.11.5" />
     <PackageReference Update="Castle.Core" Version="4.4.0" />
+    <PackageReference Update="coverlet.collector" Version="1.3.0" />
     <PackageReference Update="FluentAssertions" Version="5.10.3" />
     <PackageReference Update="FsCheck.Xunit" Version="2.14.0" />
     <PackageReference Update="Microsoft.Azure.Amqp" Version="2.4.5" />
