Add support for deterministic Builds

--- a/eng/pipelines/templates/jobs/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/jobs/archetype-sdk-client.yml
@@ -174,23 +174,16 @@ jobs:
           testRunTitle: "$(OSName) $(TestTargetFramework)"
           testResultsFormat: "VSTest"
           mergeTestResults: true
-      - pwsh: |
-          $(Build.SourcesDirectory)/eng/scripts/Merge-Coverage-Reports.ps1 -RepoRoot '$(Build.SourcesDirectory)' -BinDirectory '$(Build.BinariesDirectory)'
-        displayName: Merge Code Coverage Reports Before Publishing
+      - task: Palmmedia.reportgenerator.reportgenerator-build-release-task.reportgenerator@4
         condition: and(succeeded(), ne(variables['CodeCoverageArgs'],''))
-      - task: PublishPipelineArtifact@1
-        condition: and(succeeded(), ne(variables['CodeCoverageArgs'],''))
+        displayName: ReportGenerator
         inputs:
-          artifactName: coverage
-          path: '$(Build.SourcesDirectory)/cobertura.xml'
-      - task: PublishPipelineArtifact@1
-        condition: and(succeeded(), ne(variables['CodeCoverageArgs'],''))
-        inputs:
-          artifactName: coverage2
-          path: '$(Build.BinariesDirectory)/CoverageFiles'
+          reports: '**/*coverage.netcoreapp2.1.cobertura.xml'
+          targetdir: '$(Build.SourcesDirectory)'
+          reporttypes: Cobertura
       - task: PublishCodeCoverageResults@1
         condition: and(succeeded(), ne(variables['CodeCoverageArgs'],''))
         displayName: 'Publish code coverage report'
         inputs:
           codeCoverageTool: 'Cobertura'
-          summaryFileLocation: '$(Build.BinariesDirectory)/CoverageFiles/coverage.netcoreapp2.1.cobertura.xml'
+          summaryFileLocation: 'Cobertura.xml'
