--- a/eng/Directory.Build.Data.targets
+++ b/eng/Directory.Build.Data.targets
@@ -77,6 +77,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <Import Condition="'$(CodeCoverageArgs)' != ''"  Project="$(MSBuildThisFileDirectory)\DeterministicBuild.targets" />
+
   <!-- Add StyleCop Analyzers -->
   <ItemGroup Condition="'$(EnableStyleCopAnalyzers)' == 'true'"  >
     <PackageReference Include="StyleCop.Analyzers">
